2001-09-25  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Design
	Added a couple of design documents. 
	Added entity, game, display and client files.
	Display a smooth moving logo on screen.
	Tagging version 0.0.3

2001-09-24  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* RessourceManager
	First shot at a ressourcemanager. Loads SDL_Surfaces.
	The stuff about THandle may be a big mistake.
	Removed it.
	Tagging version 0.0.2

2001-09-22  Mads Bondo Dydensborg  <mads@dydensborg.dk>

	* (Everything)
	Made initial project, with autoconf support.
	Created cvs repository. 
	Tagging first version (0.0.1)
