@@ -1,5 +1,5 @@
 pkgdatadir = $(datadir)/games/@PACKAGE@/graphics/objects
 
-pkgdata_DATA = 
+pkgdata_DATA = basic_brick.png
 
 EXTRA_DIST = $(pkgdata_DATA)
