@@ -1,12 +1,12 @@
 bin_PROGRAMS = yanoid
 
 
-yanoid_SOURCES = entity.cc game.cc display.cc client.cc \
+yanoid_SOURCES = map.cc entity.cc game.cc display.cc client.cc \
 		surfacemanager.cc ressourcemanager.cc \
 	        debug.cc log.cc screen.cc main.cc 
 
 # none of these are installed - here for dist
 
-noinst_HEADERS = entity.hh game.hh display.hh client.hh \
+noinst_HEADERS = map.hh entity.hh game.hh display.hh client.hh \
 		 surfacemanager.hh ressourcemanager.hh \
 		 debug.hh log.hh screen.hh
