@@ -1,3 +1,9 @@
+2001-09-26  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>
+
+	* Map
+	Added a map class. Changed the entity to load a small 
+	brick. Added some info about the videomode flags.
+
 2001-09-25  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>
 
 	* Design
